[package]
name = "wal"
version = "0.1.0"
authors = ["Student <vorname.nachname@hu-berlin.de>"]
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
